cluster-config/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aadpodidentity
  labels:
    app: aadpodidentity
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app: dev
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: dummy-ns
  labels:
    app: dummy-ns
    admission.gatekeeper.sh/ignore: ignore
    control-plane: ignore
  annotations:
    linkerd.io/inject: enabled
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: falco
#   labels:
#     app: falco
#   annotations:
#     linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux
  labels:
    app: flux
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    app: ingress
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: monitoring
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app: production
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    app: staging
  annotations:
    linkerd.io/inject: enabled
