cluster-config/np-allow-consolidated.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-aadpodidentity
  namespace: aadpodidentity
spec:
  podSelector:
    matchLabels:
      component: "mic"
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
    - to:
      - ipBlock:
          cidr: 127.0.0.1/32
      ports:
      - port: 2579
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dev
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - namespaceSelector:
          matchLabels:
            app: ingress
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - ports:
      - port: 445
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
    - to:
      - ipBlock:
          cidr: 127.0.0.1/32
      ports:
      - port: 2579
---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: allow-falco
#   namespace: falco
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#     - from:
#       - podSelector: {}
#       - namespaceSelector:
#           matchLabels:
#             linkerd.io/is-control-plane: "true"
#   egress:
#     - to:
#       - podSelector: {}
#       - namespaceSelector:
#           matchLabels:
#             linkerd.io/is-control-plane: "true"
#     - to:
#       - namespaceSelector:
#           matchLabels:
#             kubernetes.io/cluster-service: "true"
#         podSelector:
#           matchLabels:
#             k8s-app: kube-dns
#       ports:
#       - port: 53
#         protocol: UDP
#       - port: 53
#         protocol: TCP
#     - to:
#       - ipBlock:
#           cidr: 0.0.0.0/0
#       ports:
#       - port: 443
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-flux
  namespace: flux
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
        protocol: TCP
      - port: 22
        protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-gatekeeper-system
  namespace: gatekeeper-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
      - namespaceSelector:
          matchLabels:
            app: "monitoring"
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress
  namespace: ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from: []
      ports:
      - port: 80
        protocol: TCP
    - from:
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - podSelector: {}
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - namespaceSelector:
          matchLabels:
            app: dev
      - namespaceSelector:
          matchLabels:
            app: staging
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
---
kind: NetworkPolicy 
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-linkerd
  namespace: linkerd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            linkerd.io/control-plane-ns: linkerd
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            linkerd.io/control-plane-ns: linkerd
      # - namespaceSelector:
      #     matchLabels:
      #       app: dev
      # - namespaceSelector:
      #     matchLabels:
      #       app: staging
      # - namespaceSelector:
      #     matchLabels:
      #       app: ingress
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-monitoring
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            control-plane: controller-manager
    - to:
      - ipBlock:
          cidr: 100.64.1.0/24
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-production
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - namespaceSelector:
          matchLabels:
            app: ingress
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - ports:
      - port: 445
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
    - to:
      - ipBlock:
          cidr: 100.64.1.0/24
      ports:
      - port: 2579
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-staging
  namespace: staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
      - namespaceSelector:
          matchLabels:
            app: ingress
  egress:
    - to:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            linkerd.io/is-control-plane: "true"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/cluster-service: "true"
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - ports:
      - port: 445
        protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
    - to:
      - ipBlock:
          cidr: 100.64.1.0/24
      ports:
      - port: 2579
